# mirage-server

./: .gitmodules  CMakeLists.txt
include/SDL_image/: CMakeLists.txt
src/: client.cpp  client.h  config.h  graphics.cpp  graphics.h  main.cpp  map.cpp  map.h  server.cpp  server.h
src/game/: client.cpp  client.h  game.cpp  game.h
